# echoes

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
app/: main.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: quotes.py
app/core/: config.py
app/services/: quote_service.py  quotes.json
tests/: test_quotes.py
